tests/ui/resolve/use-self-in-inner-fn.stderr
error[E0401]: can't use `Self` from outer item
  --> $DIR/use-self-in-inner-fn.rs:6:25
   |
LL | impl A {
   | ---- `Self` type implicitly declared here, by this `impl`
...
LL |         fn peach(this: &Self) {
   |            -----        ^^^^ use of `Self` from outer item
   |            |
   |            `Self` used in this inner function
   |
help: refer to the type directly here instead
   |
LL -         fn peach(this: &Self) {
LL +         fn peach(this: &A) {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0401`.
